[tool.poetry]
name = "pydesigner"
version = "1.1.0"
description = "A hands-free DTI, DKI, FBI and FBWM preprocessing pipeline"
license = "Proprietary"
authors = ["Siddhartha Dhiman <sid.kill3r@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.24.3"
scipy = "^1.5.0"
joblib = "^1.2.0"
tqdm = "^4.65.0"
multiprocess = "^0.70.14"
nibabel = "^5.1.0"
dipy = "^1.7.0"
cvxpy = "^1.3.1"
matplotlib = "^3.7.1"

[tool.poetry.scripts]
pydesigner = "pydesigner.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs"
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"
